# cna-samples

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEFERRED.md  LICENSE  NEXT.md  NOTICE.md  PLAN.md  README.md  ignored.md
cmake/: SampleHelpers.cmake
samples/AccelerometerSample/: CMakeLists.txt  missing.md
samples/AccelerometerSample/src/: Accelerometer.hpp  AccelerometerSampleGame.hpp  Program.cpp
samples/AimingSample/: CMakeLists.txt  missing.md
samples/AimingSample/src/: AimingGame.hpp  Program.cpp
samples/Audio3D/: CMakeLists.txt  missing.md
samples/Audio3D/src/: Audio3DGame.hpp  Program.cpp
samples/BillboardSample/: missing.md
samples/BloomSample/: missing.md
samples/Bounce/: CMakeLists.txt  diff.md  missing.md
samples/Bounce/src/: BounceGame.hpp  GeometricPrimitive.hpp  Program.cpp  Sphere.hpp  SpherePrimitive.hpp
samples/CPUSkinning/: missing.md
samples/CameraShake/: CMakeLists.txt  missing.md
samples/CameraShake/Content/: font.font.json  ground.model.json
samples/CameraShake/src/: CameraShakeGame.hpp  Program.cpp
samples/CardsStarterKit/: CMakeLists.txt  missing.md
samples/CardsStarterKit/src/: BlackjackGame.hpp  Program.cpp
samples/CatapultWars/: CMakeLists.txt  CatapultWars.htm  missing.md
samples/CatapultWars/src/: AI.hpp  Animation.hpp  AudioManager.hpp  Catapult.hpp  CatapultGame.hpp  GameScreen.hpp  Human.hpp  InputState.hpp  MenuEntry.hpp  MenuScreen.hpp  Player.hpp  Program.cpp  Projectile.hpp  ScreenManager.hpp  Screens.hpp
samples/ChaseAndEvade/: CMakeLists.txt  missing.md
samples/ChaseAndEvade/src/: ChaseAndEvadeGame.hpp  Program.cpp
samples/ChaseCamera/: CMakeLists.txt  missing.md
samples/ChaseCamera/Content/: Ship.model.json  gameFont.font.json
samples/ChaseCamera/src/: ChaseCamera.hpp  ChaseCameraGame.hpp  Program.cpp  RawModel.hpp  Ship.hpp
samples/ClientServerSample/: CMakeLists.txt  missing.md
samples/ClientServerSample/src/: ClientServerGame.hpp  Program.cpp  Tank.hpp
samples/CollisionSample/: CMakeLists.txt  missing.md
samples/CollisionSample/src/: BoundingOrientedBox.hpp  CollisionSample.hpp  DebugDraw.hpp  FrameRateCounter.hpp  GeomUtil.hpp  Program.cpp  TriangleTest.hpp
samples/ColorReplacement/: missing.md
samples/CustomModelAnimation/: missing.md
samples/CustomModelClass/: CMakeLists.txt  missing.md
samples/CustomModelClass/src/: CustomModelGame.hpp  Program.cpp
samples/CustomModelEffect/: missing.md
samples/DistortionSample/: missing.md
samples/DynamicMenu/: CMakeLists.txt  missing.md
samples/DynamicMenu/src/: DynamicMenuGame.hpp  Program.cpp
samples/FlockingSample/: CMakeLists.txt  missing.md
samples/FlockingSample/src/: AIParameters.hpp  Flock.hpp  FlockingSampleGame.hpp  InputState.hpp  Program.cpp
samples/FuzzyLogic/: CMakeLists.txt  missing.md
samples/GameStateManagement/: CMakeLists.txt  missing.md
samples/GeneratedGeometry/: CMakeLists.txt  missing.md
samples/GesturesSample/: CMakeLists.txt  missing.md
samples/Graphics3D/: CMakeLists.txt  missing.md
samples/HeightmapCollision/: CMakeLists.txt  missing.md
samples/HoneycombRush/: CMakeLists.txt  HoneycombRushSample.htm  missing.md
samples/InputReporter/: CMakeLists.txt  missing.md
samples/InputSequence/: CMakeLists.txt  missing.md
samples/InstancedModel/: missing.md
samples/InverseKinematics/: CMakeLists.txt  missing.md
samples/LensFlare/: CMakeLists.txt  missing.md
samples/LocalizationSample/: CMakeLists.txt  missing.md
samples/MarbleMaze/: CMakeLists.txt  missing.md
samples/MicrophoneEcho/: CMakeLists.txt  missing.md
samples/NetRumble/: missing.md
samples/NetworkPrediction/: CMakeLists.txt  missing.md
samples/NinjAcademy/: CMakeLists.txt  missing.md
samples/NonPhotoRealistic/: missing.md
samples/NormalMapping/: missing.md
samples/Orientation/: CMakeLists.txt  missing.md
samples/ParticleSample/: CMakeLists.txt  missing.md
samples/Particles2DPipeline/: CMakeLists.txt  missing.md
samples/Particles3D/: missing.md
samples/PathDrawing/: CMakeLists.txt  missing.md
samples/Pathfinding/: CMakeLists.txt  missing.md
samples/PeerToPeer/: CMakeLists.txt  missing.md
samples/PerPixelCollision/: CMakeLists.txt  missing.md
samples/PerPixelLighting/: missing.md
samples/PerformanceMeasuring/: CMakeLists.txt  missing.md
samples/PickingSample/: CMakeLists.txt  missing.md
samples/Platformer/: CMakeLists.txt  missing.md
samples/Primitives3D/: CMakeLists.txt  missing.md
samples/PrimitivesSample/: CMakeLists.txt  missing.md
samples/ReachGraphicsDemo/: CMakeLists.txt  missing.md
samples/RectangleCollision/: CMakeLists.txt  missing.md
samples/RimLighting/: CMakeLists.txt  missing.md
samples/RolePlayingGame/: CMakeLists.txt  missing.md
samples/SafeArea/: CMakeLists.txt  missing.md
samples/ShadowMapping/: missing.md
samples/ShapeRendering/: CMakeLists.txt  missing.md
samples/ShatterEffect/: missing.md
samples/ShipGame/: missing.md
samples/SimpleAnimation/: CMakeLists.txt  missing.md
samples/SkinnedModelExtensions/: missing.md
samples/SkinningSample/: missing.md
samples/SnowShovel/: CMakeLists.txt  missing.md
samples/SoccerPitch/: CMakeLists.txt  missing.md
samples/SoundAndMusic/: CMakeLists.txt  missing.md
samples/Spacewar/: missing.md
samples/SplitScreen/: missing.md
samples/SpriteEffects/: CMakeLists.txt  missing.md
samples/SpriteSheet/: CMakeLists.txt  missing.md
samples/TankOnHeightmap/: missing.md
samples/TexturesAndColors/: CMakeLists.txt  missing.md
samples/TicTacToe/: CMakeLists.txt  missing.md
samples/TiltPerspective/: CMakeLists.txt  missing.md
samples/TouchThumbsticks/: CMakeLists.txt  missing.md
samples/TransformedCollision/: CMakeLists.txt  missing.md
samples/TrianglePicking/: CMakeLists.txt  missing.md
samples/UISample/: CMakeLists.txt  missing.md
samples/VertexLighting/: missing.md
samples/WaypointSample/: CMakeLists.txt  missing.md
samples/XmlParticles/: missing.md
samples/Yacht/: CMakeLists.txt  Yacht.htm  missing.md
tools/: fbx_ascii2model.py  gen_help_png.py  make_font.py  obj2model.py
(+558 files in other folders)
